removes hyperdrive, updates wrangler, fixes book covers

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ body {
 .book-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: var(--transition);
 }
 
